List Widget - general updatable list component. See #60. - this add initial implementation of new general widget to the core library - upgrade to ClosureJavascriptFramework 1.18.1 (see related issue https://github.com/jlgrock/ClosureJavascriptFramework/issues/45)

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,6 +44,7 @@
                 <version>${jsframework.version}</version>
                 <configuration>
                     <prologue>${profile.prologue}</prologue>
+                    <browserVersion>FF</browserVersion>
                 </configuration>
             </plugin>
 
