--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.jboss.search</groupId>
     <artifactId>web-ui</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
 
     <name>search.jboss.org Web UI</name>
