--- a/profilePage/pom.xml
+++ b/profilePage/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>org.jboss.search.web-ui</groupId>
     <artifactId>profile-web-ui</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.jboss.search</groupId>
         <artifactId>web-ui</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <dependencies>
