Update gjslint config: exclude specific folders, increase line length. Related #64

--- a/gjslint.conf
+++ b/gjslint.conf
@@ -1,2 +1,4 @@
 --strict
 --jsdoc
+--exclude_directories=closure-library-99cd91,closure-templates-20120-12-21,externs,resources,webapp,html
+--max_line_length=120
