Prepare production maven profile.
It is recommened to run it using `mvn clean package -Pproduction -DskipTests`

- Move modules definition to individual profiles
- Copy compiled JS to correct location and delete unnecessary folders

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -31,6 +31,7 @@
                 <version>${jsframework.version}</version>
             </plugin>
 
+            <!--
             <plugin>
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
                 <artifactId>closure-compiler-maven-plugin</artifactId>
@@ -39,6 +40,7 @@
                     <compileLevel>${closure.compiler.level}</compileLevel>
                 </configuration>
             </plugin>
+            -->
 
             <plugin>
                 <groupId>com.github.jlgrock.javascript-framework</groupId>
@@ -46,7 +48,7 @@
                 <version>${jsframework.version}</version>
                 <configuration>
                     <prologue>${profile.prologue}</prologue>
-                    <browserVersion>FF</browserVersion>
+                    <browserVersion>${browserVersion}</browserVersion>
                 </configuration>
             </plugin>
 
