POM files clean up.
Significant revision of pom.xml files of all modules. Getting rid of garbage and unnecessary constructs. A lot of configuration has been moved to pluginManagement.

Production profile has been improved and is now almost final.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ target/
 
 # --------------------------------------------------------------------
 # This files are used only for development and are generated
-# by *ForTesting.sh scripts. They should never get into repo the repo.
+# by shell scripts. They should never get into repo the repo.
 
-searchPage/src/main/webapp/search-testing-only.js
+searchPage/src/main/webapp/search_app.js
 profilePage/src/main/webapp/profile-testing-only.js
