--- a/pom.xml
+++ b/pom.xml
@@ -57,23 +57,6 @@
         <browserVersion>FF</browserVersion>
     </properties>
 
-    <!--
-    <modules>
-        <module>core</module>
-        <module>searchPage</module>
-        <module>profilePage</module>
-    </modules>
-    -->
-
-    <dependencies>
-        <dependency>
-            <groupId>com.googlecode.jstd-maven-plugin</groupId>
-            <artifactId>jstd-maven-plugin</artifactId>
-            <version>${jstd.plugin.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -97,19 +80,103 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.7</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.samaxes.maven</groupId>
+                    <artifactId>minify-maven-plugin</artifactId>
+                    <version>1.7.3</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.google.code.maven-replacer-plugin</groupId>
+                    <artifactId>replacer</artifactId>
+                    <version>1.5.3</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.googlecode.jstd-maven-plugin</groupId>
+                    <artifactId>jstd-maven-plugin</artifactId>
+                    <version>${jstd.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>closure-compiler-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                    <configuration>
+                        <compileLevel>${closure.compiler.level}</compileLevel>
+                        <defines>
+                            <define>
+                                <defineName>goog.ENABLE_DEBUG_LOADER</defineName>
+                                <value>false</value>
+                                <valueType>boolean</valueType>
+                            </define>
+                            <define>
+                                <defineName>goog.DEBUG</defineName>
+                                <value>false</value>
+                                <valueType>boolean</valueType>
+                            </define>
+                        </defines>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>jsar-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                    <extensions>true</extensions>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>jspreprocessor-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>jsdependency-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>closure-testing-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                    <configuration>
+                        <prologue>${profile.prologue}</prologue>
+                        <browserVersion>${browserVersion}</browserVersion>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.github.jlgrock.javascript-framework</groupId>
+                    <artifactId>source-archive-maven-plugin</artifactId>
+                    <version>${jsframework.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>js-gen-source-archive</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <profiles>
 
-        <!-- No JS optimization. -->
-        <!--
-        <profile>
-            <id>whitespace</id>
-            <properties>
-                <closure.compiler.level>WHITESPACE_ONLY</closure.compiler.level>
-            </properties>
-        </profile>
-        -->
-
-        <!-- Advanced JS optimization and stripping out goog.DEBUG and WTF.ENABLED parts. -->
         <profile>
             <id>advanced</id>
             <activation>
@@ -120,38 +187,8 @@
                 <module>searchPage</module>
                 <module>profilePage</module>
             </modules>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.jlgrock.javascript-framework</groupId>
-                        <artifactId>closure-compiler-maven-plugin</artifactId>
-                        <version>${jsframework.version}</version>
-                        <configuration>
-                            <defines>
-                                <define>
-                                    <defineName>goog.ENABLE_DEBUG_LOADER</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                                <define>
-                                    <defineName>goog.DEBUG</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                            </defines>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
-        <!--
-            ==========================================================
-            Used in Jenkins build. It allows to test the application
-            directly from the Jenkins [public] folder after the build
-            is finished.
-            ==========================================================
-        -->
         <profile>
             <id>jenkins</id>
             <modules>
@@ -159,34 +196,11 @@
                 <module>searchPage</module>
                 <module>profilePage</module>
             </modules>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.jlgrock.javascript-framework</groupId>
-                        <artifactId>closure-compiler-maven-plugin</artifactId>
-                        <version>${jsframework.version}</version>
-                        <configuration>
-                            <defines>
-                                <define>
-                                    <defineName>goog.ENABLE_DEBUG_LOADER</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                                <define>
-                                    <defineName>goog.DEBUG</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                            </defines>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
         <!--
             ==========================================================
-            TBD
+            Production build includes the search app page only now.
             ==========================================================
         -->
         <profile>
@@ -195,29 +209,6 @@
                 <module>core</module>
                 <module>searchPage</module>
             </modules>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.jlgrock.javascript-framework</groupId>
-                        <artifactId>closure-compiler-maven-plugin</artifactId>
-                        <version>${jsframework.version}</version>
-                        <configuration>
-                            <defines>
-                                <define>
-                                    <defineName>goog.ENABLE_DEBUG_LOADER</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                                <define>
-                                    <defineName>goog.DEBUG</defineName>
-                                    <value>false</value>
-                                    <valueType>boolean</valueType>
-                                </define>
-                            </defines>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 
