--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jstd.plugin.version>1.3.5.1</jstd.plugin.version>
         <lesscss-maven-plugin.version>1.3.3</lesscss-maven-plugin.version>
-        <jsframework.version>1.18.1</jsframework.version>
+        <jsframework.version>1.18.2</jsframework.version>
         <!-- Compiler v20131014 is used by default by CJF v1.18.1 -->
         <closure.library.version>v20131014</closure.library.version>
 
@@ -69,14 +69,15 @@
 
     <repositories>
         <repository>
-            <id>jstd-maven-plugin google code repo</id>
-            <url>http://jstd-maven-plugin.googlecode.com/svn/maven2</url>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
-            <id>jstd-maven-plugin google code repo</id>
-            <url>http://jstd-maven-plugin.googlecode.com/svn/maven2</url>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
         </pluginRepository>
     </pluginRepositories>
 
